UNLV_driving_simulator_motion_system_G/support_miraiintertech/ISaGRAF/TARGET/USER/TbusSIO.h

	#define	TBUSSIOAPI	__declspec(dllexport)
	#define TBUSSIOAPI	__declspec(dllimport)
TBUSSIOAPI int WINAPI get_sio_error( void );
TBUSSIOAPI int WINAPI init_tmbs_config(
	LPCTSTR port,      // Port Name ( "COM1","COM2"etc. )
	int baud,          // Baudrate( 4,5,6,7,11H,12H,13H,14H )
	int nrt,           // Retry
	BOOL reset,        // 
	BOOL automatic,    // 
	int *axes_info     // 
	);
TBUSSIOAPI int WINAPI init_tmbs( void );
TBUSSIOAPI int WINAPI close_tmbs( void	);
TBUSSIOAPI int WINAPI reopen_tmbs( void );
TBUSSIOAPI int WINAPI get_tmbs_state( void );
TBUSSIOAPI int WINAPI get_current_baud( void );
TBUSSIOAPI int WINAPI get_com_errlog( void );
TBUSSIOAPI int WINAPI write_svmem( int axis, int address, const long *src );
TBUSSIOAPI int WINAPI memcmd_form0( char *func_id, int axis, DWORD com_data, LPDWORD res_data, LPDWORD warning );
TBUSSIOAPI int WINAPI memcmd_form1( char *func_id, int axis, int bank, int point, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI memcmd_form2( char *func_id, int axis, int bank, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI memcmd_form3( char *func_id, int axis, int bank, int point, LPDWORD res_data, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form0( char func_id, int axis, int data, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form1( char func_id, int axis, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form2( char func_id, int axis, int data0, int data1, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form3( char func_id, int axis, int data0, int data1, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form4( char func_id, int axis, int data, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form5( char func_id, int axis, int data, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form6( char func_id, int axis, int data, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form7( char func_id, int axis, int data0, int data1, int data2, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI dircmd_form8( char func_id, int axis, int data0, int data1, unsigned char *res, LPDWORD warning );
TBUSSIOAPI int WINAPI cmd_unform( int axis, int mode, char *cmd_str, LPDWORD res_data, LPDWORD warning );
#define	SIO_DONE			1	//
#define SIO_ERROR			0	//
#define SIO_COMUSED			-1	//
#define SIO_TIMEOUT			-2	//
#define SIO_NOINIT			-3	//
#define SIO_INVALID_AXIS	-4	//
#define SIO_INVALID_PARAM	-5	//
#define SIO_NOTSUPORT_TO	-6	//
#define SIO_NOTSUPORT_DTR	-7	//
#define SIO_NOTSUPORT_BAUD	-8	//
#define SIO_NOTSUPORT_PARA	-9	//
#define SIO_NO_CONFIGFILE	-10	//
#define SIO_RESOURCE		-11	//
#define SIO_COMFAILED		-12	//