UNLV_driving_simulator_motion_system_G/support_miraiintertech/Dyadic_TBSmp_Move/TBSmp_Move/VB/Tbussio.bas


'// Termi-BUS SIO の新通信起動関数 ( 通信条件直接指定 )
'TBUSSIOAPI int WINAPI init_tmbs_config(
'    LPCTSTR port,      // 通信ポートファイル名 ( "COM1","COM2"etc. )
'    int baud,          // ボーレイト指定コード( 4,5,6,7,11H,12H,13H,14H )
'    int nrt,           // コマンド再送最大回数
'    BOOL reset,        // TRUE で再送回数オーバのとき通信初期化に戻る
'    BOOL automatic,    // TRUE でボーレイト自動設定
'    int *axes_info     // 軸構成指定情報
'    );

Public Declare Function init_tmbs_config Lib "TMBSCOM.DLL" Alias "_init_tmbs_config@24" _
    (ByVal port As String, _
    ByVal baud As Long, _
    ByVal nrt As Long, _
    ByVal reset As Long, _
    ByVal automatic As Long, _
    axes_info As Long) As Long

'// Termi-BUS SIO の新通信起動関数 ( TBUSSIO.INIファイル指定 )
'TBUSSIOAPI int WINAPI init_tmbs( void );

Public Declare Function init_tmbs Lib "TMBSCOM.DLL" Alias "_init_tmbs@0" () As Long

'// Termi-BUS SIO の全ての資源を閉じて終了する関数
'TBUSSIOAPI int WINAPI close_tmbs( void );

Public Declare Function close_tmbs Lib "TMBSCOM.DLL" Alias "_close_tmbs@0" () As Long

'// close_tmbs 関数で閉じた Termi-BUS を再度オープンする関数
'TBUSSIOAPI int WINAPI reopen_tmbs( void );

Public Declare Function reopen_tmbs Lib "TMBSCOM.DLL" Alias "_reopen_tmbs@0" () As Long

'//----------------------------------------------------------------
'//                      通信状態確認ＡＰＩ
'//----------------------------------------------------------------

'// Termi-BUS SIO 通信処理実行状態を得る関数
'TBUSSIOAPI int WINAPI get_tmbs_state( void );

Public Declare Function get_tmbs_state Lib "TMBSCOM.DLL" Alias "_get_tmbs_state@0" () As Long

'// 現在のボーレイト設定値を得る関数
'TBUSSIOAPI int WINAPI get_current_baud( void );

Public Declare Function get_current_baud Lib "TMBSCOM.DLL" Alias "_get_current_baud@0" () As Long

'// COM ポートの通信エラーログを得る関数
'TBUSSIOAPI int WINAPI get_com_errlog( void );

Public Declare Function get_com_errlog Lib "TMBSCOM.DLL" Alias "_get_com_errlog@0" () As Long

'//----------------------------------------------------------------
'//                   仮想メモリアクセスＡＰＩ
'//----------------------------------------------------------------

'// 仮想メモリ空間ランダムアクセス書き込み関数
'TBUSSIOAPI int WINAPI write_svmem(
'    int axis,           // 軸番号
'    int address,        // 仮想メモリ空間の書き込み先アドレス
'    const long *src     // 書き込みデータ格納領域へのポインタ
'    );

Public Declare Function write_svmem Lib "TMBSCOM.DLL" Alias "_write_svmem@12" _
    (ByVal axis As Long, _
    ByVal address As Long, _
    src As Long) As Long

'//----------------------------------------------------------------
'//                低レベルコマンド送受信ＡＰＩ
'//----------------------------------------------------------------

'// 低レベルメモリコマンド送受信関数 ( R4,W4,T4 形式 )
'TBUSSIOAPI int WINAPI memcmd_form0(
'    char *func_id,      // メモリコマンド機能コード文字列へのポインタ
'    int axis,           // 軸番号
'    DWORD com_data,     // コマンドデータ
'    LPDWORD res_data,   // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function memcmd_form0 Lib "TMBSCOM.DLL" Alias "_memcmd_form0@20" _
    (ByVal func_id As String, _
    ByVal axis As Long, _
    ByVal com_data As Long, _
    res_data As Long, _
    warning As Long) As Long

'// 低レベルメモリコマンド送受信関数 ( Q1,Q3 形式 )
'TBUSSIOAPI int WINAPI memcmd_form1(
'    char *func_id,      // メモリコマンド機能コード文字列へのポインタ
'    int axis,           // 軸番号
'    int bank,           // コマンドデータ( バンク番号 )
'    int point,          // コマンドデータ( ポイント番号 )
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function memcmd_form1 Lib "TMBSCOM.DLL" Alias "_memcmd_form1@24" _
    (ByVal func_id As String, _
    ByVal axis As Long, _
    ByVal bank As Long, _
    ByVal Point As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルメモリコマンド送受信関数 ( Q2,Q4 形式 )
'TBUSSIOAPI int WINAPI memcmd_form2(
'    char *func_id,      // メモリコマンド機能コード文字列へのポインタ
'    int axis,           // 軸番号
'    int bank,           // コマンドデータ( バンク番号 )
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function memcmd_form2 Lib "TMBSCOM.DLL" Alias "_memcmd_form2@20" _
    (ByVal func_id As String, _
    ByVal axis As Long, _
    ByVal bank As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルメモリコマンド送受信関数 ( V5,V6 形式 )
'TBUSSIOAPI int WINAPI memcmd_form3(
'    char *func_id,      // メモリコマンド機能コード文字列へのポインタ
'    int axis,           // 軸番号
'    int bank,           // コマンドデータ( バンク番号 )
'    int point,          // コマンドデータ( ポイント番号 )
'    LPDWORD res_data,   // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function memcmd_form3 Lib "TMBSCOM.DLL" Alias "_memcmd_form3@24" _
    (ByVal func_id As String, _
    ByVal axis As Long, _
    ByVal bank As Long, _
    ByVal Point As Long, _
    res_data As Long, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( a,b,i,j,m 形式 )
'TBUSSIOAPI int WINAPI dircmd_form0(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data,           // コマンドデータ
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form0 Lib "TMBSCOM.DLL" Alias "_dircmd_form0@20" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( d,n,t 形式 )
'TBUSSIOAPI int WINAPI dircmd_form1(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form1 Lib "TMBSCOM.DLL" Alias "_dircmd_form1@16" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( g 形式 )
'TBUSSIOAPI int WINAPI dircmd_form2(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data0,          // コマンドデータ ( 種別選択コード )
'    int data1,          // コマンドデータ ( ゲイン番号 )
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form2 Lib "TMBSCOM.DLL" Alias "_dircmd_form2@24" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data0 As Long, _
    ByVal data1 As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( l 形式 )
'TBUSSIOAPI int WINAPI dircmd_form3(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data0,          // コマンドデータ ( 停止時電流制限値 )
'    int data1,          // コマンドデータ ( 移動時電流制限値 )
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form3 Lib "TMBSCOM.DLL" Alias "_dircmd_form3@24" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data0 As Long, _
    ByVal data1 As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( o, r 形式 )
'TBUSSIOAPI int WINAPI dircmd_form4(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data,           // コマンドデータ
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form4 Lib "TMBSCOM.DLL" Alias "_dircmd_form4@20" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( q 形式 )
'TBUSSIOAPI int WINAPI dircmd_form5(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data,           // コマンドデータ
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form5 Lib "TMBSCOM.DLL" Alias "_dircmd_form5@20" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( s 形式 )
'TBUSSIOAPI int WINAPI dircmd_form6(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data,           // コマンドデータ
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form6 Lib "TMBSCOM.DLL" Alias "_dircmd_form6@20" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( v 形式 )
'TBUSSIOAPI int WINAPI dircmd_form7(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data0,          // コマンドデータ ( 選択コード )
'    int data1,          // コマンドデータ ( 速度指令 )
'    int data2,          // コマンドデータ ( 加速度指令 )
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form7 Lib "TMBSCOM.DLL" Alias "_dircmd_form7@28" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data0 As Long, _
    ByVal data1 As Long, _
    ByVal data2 As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルダイレクトコマンド送受信関数 ( z 形式 )
'TBUSSIOAPI int WINAPI dircmd_form8(
'    char func_id,       // ダイレクトコマンド機能コード文字
'    int axis,           // 軸番号
'    int data0,          // コマンドデータ ( 領域信号境界値 )
'    int data1,          // コマンドデータ ( 境界の方向 )
'    unsigned char *res, // レスポンスデータ格納領域へのポインタ
'    LPDWORD warning     // ワーニングコード格納領域へのポインタ
'    );

Public Declare Function dircmd_form8 Lib "TMBSCOM.DLL" Alias "_dircmd_form8@24" _
    (ByVal func_id As Byte, _
    ByVal axis As Long, _
    ByVal data0 As Long, _
    ByVal data1 As Long, _
    Res As Byte, _
    warning As Long) As Long

'// 低レベルコマンド送受信関数 ( 汎用 形式なし )
'TBUSSIOAPI int WINAPI cmd_unform(
'       int axis,         // 軸番号
'       int mode,         // mode 0:MemoryCommand, 1:DirectCommand
'       char *cmd_str,    // コマンド文字列 (11文字) へのポインタ
'       LPDWORD res_data, // レスポンスデータ格納領域へのポインタ
'       LPDWORD warning   // ワーニングコード格納領域へのポインタ
'       );

Public Declare Function cmd_unform Lib "TMBSCOM.DLL" Alias "_cmd_unform@20" _
    (ByVal axis As Long, _
    ByVal mode As Long, _
    cmd_str As String, _
    res_data As Long, _
    warning As Long) As Long

'//----------------------------------------------------------------
'//                   旧バージョン互換定数
'//----------------------------------------------------------------
'//------------------------------------------------------------
'//              各関数からの成功／失敗返り値
'//------------------------------------------------------------
'#define SIO_DONE            1   // 正常終了
'#define SIO_ERROR           0   // エラー

Public Const SIO_DONE As Long = 1
Public Const SIO_ERROR As Long = 0

'//-------------------------------------------------
'//   get_sio_error() 関数から返されるエラーコード
'//-------------------------------------------------
Public Const SIO_COMUSED As Long = -1           'COMポートがすでに使われている
Public Const SIO_TIMEOUT As Long = -2           'レスポンスのタイムアウト
Public Const SIO_NOINIT As Long = -3            '初期化されていません
Public Const SIO_INVALID_AXIS As Long = -4      '環境設定に無い軸が指定された
Public Const SIO_INVALID_PARAM As Long = -5     '正しくないパラメータが渡された
Public Const SIO_NOTSUPORT_TO As Long = -6      '通信タイムアウトがサポートされていない
Public Const SIO_NOTSUPORT_DTR As Long = -7     'DTR制御がサポートされていない
Public Const SIO_NOTSUPORT_BAUD As Long = -8    'サポートされていないボーレイトが指定された
Public Const SIO_NOTSUPORT_PARA As Long = -9    'COMパラメータの変更がサポートされていない
Public Const SIO_NO_CONFIGFILE As Long = -10    '環境設定ファイルが見つからない
Public Const SIO_RESOURCE As Long = -11         'リソースデータが読み込めない


'//-------------------------------------------------
'//                   新規追加定数
'//-------------------------------------------------
'//-------------------------------------------------
'//   get_sio_error() 関数から返されるエラーコード
'//-------------------------------------------------
Public Const SIO_COMFAILED As Long = -12    'COM ポートのオープンに失敗しました
